FrontEnd/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: frontendcontainer
        image: 795674276339.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest
        volumeMounts:
        - name: foo
          mountPath: "/etc/nginx/conf.d"
          readOnly: true
      volumes:
      - name: foo
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
