FrontEnd/ingress.yml
apiVersion: networking.k8s.io/v1beta1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vamsee.kops.cf
    http:
      paths:
      - backend:
          serviceName: mysite-service
          servicePort: 80
